--- a/app/src/main/res/layout/item_ingredient_search.xml
+++ b/app/src/main/res/layout/item_ingredient_search.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:text="0"
-            android:textColor="@color/blackTextColor"
+            android:textColor="@color/colorPrimary"
             android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -42,7 +42,7 @@
             android:layout_width="22dp"
             android:layout_height="28dp"
             android:layout_marginEnd="8dp"
-            android:tint="@color/blackTextColor"
+            android:apptint="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/ing_selected_amount"
             app:layout_constraintTop_toTopOf="parent"
@@ -53,7 +53,7 @@
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:layout_marginEnd="16dp"
-            android:tint="@color/blackTextColor"
+            android:apptint="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
