--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#C4C4C4</color>
-    <color name="colorSecondary">#333333</color>
+    <color name="colorPrimary">#1F2037</color>
+    <color name="colorSecondary">#70CF43</color>
     <color name="colorWhite">#FFFFFF</color>
-    <color name="bottomBarTextColor">#5E5E5E</color>
-    <color name="bottomBarSelected">#2C98F0</color>
-    <color name="blackTextColor">#000000</color>
-
+    <color name="colorBlack">#000000</color>
+    <color name="colorBackground">#FFBFBF</color>
 </resources>
