--- a/app/src/main/res/layout/activity_create_ingsel.xml
+++ b/app/src/main/res/layout/activity_create_ingsel.xml
@@ -17,7 +17,8 @@
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/textView3"
@@ -36,13 +37,13 @@
         android:id="@+id/ingsel_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="Navn"
         android:inputType="textCapSentences"
         app:layout_constraintEnd_toEndOf="@+id/tv_info1"
         app:layout_constraintStart_toStartOf="@+id/tv_info1"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/textView10"
         tools:layout_conversion_absoluteHeight="45dp"
         tools:layout_conversion_absoluteWidth="210dp" />
 
@@ -112,12 +113,31 @@
 
     <Button
         android:id="@+id/btn_ingsel_search"
-        android:layout_width="0dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="Søg"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/inglist_selected"
         app:layout_constraintStart_toStartOf="@+id/inglist_selected" />
+
+    <Button
+        android:id="@+id/btn_ingsel_save"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="Gem"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_ingsel_search"
+        app:layout_constraintEnd_toEndOf="@+id/inglist_selected"
+        app:layout_constraintTop_toTopOf="@+id/btn_ingsel_search" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Indtast et navn til din ingrediensgruppe, og tilføj de varer du ønsker at sammenligne priser for"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@+id/ingsel_name"
+        app:layout_constraintStart_toStartOf="@+id/ingsel_name"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
