last more ui changes

--- a/app/src/main/res/layout/item_ingredient_search.xml
+++ b/app/src/main/res/layout/item_ingredient_search.xml
@@ -21,7 +21,7 @@
             android:fontFamily="@font/roboto_light"
             android:maxLines="2"
             android:text="TextView"
-            android:textColor="@color/blackTextColor"
+            android:textColor="@color/colorBlack"
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/ing_price"
             app:layout_constraintStart_toEndOf="@+id/imageView"
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto_bold"
             android:text="45"
-            android:textColor="@color/blackTextColor"
+            android:textColor="@color/colorBlack"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/ing_price_decimal"
@@ -119,7 +119,7 @@
             android:layout_marginBottom="2dp"
             android:fontFamily="@font/roboto_bold"
             android:text=".95"
-            android:textColor="@color/blackTextColor"
+            android:textColor="@color/colorBlack"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/ing_price"
             app:layout_constraintEnd_toStartOf="@+id/ing_subtract" />
