--- a/app/src/main/res/layout/activity_create_recipe.xml
+++ b/app/src/main/res/layout/activity_create_recipe.xml
@@ -64,8 +64,9 @@
             android:layout_marginStart="5dp"
             android:elevation="10dp"
             android:fontFamily="sans-serif-black"
+            android:text="200.95"
             android:textColor="@color/colorWhite"
-            android:textSize="15sp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/textView12"
             app:layout_constraintStart_toEndOf="@+id/textView12"
             app:layout_constraintTop_toTopOf="@+id/textView12" />
@@ -76,7 +77,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:fontFamily="sans-serif-black"
-            android:textSize="16sp"
+            android:text="55"
+            android:textColor="@color/colorBlack"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView8"
             app:layout_constraintStart_toEndOf="@+id/imageView8"
             app:layout_constraintTop_toTopOf="@+id/imageView8" />
@@ -136,9 +139,7 @@
             android:textColor="@color/colorPrimary"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/recipe_list_time"
-            app:layout_constraintStart_toEndOf="@+id/recipe_list_time"
-            app:layout_constraintTop_toTopOf="@+id/recipe_list_time"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintStart_toEndOf="@+id/recipe_list_time" />
 
         <ImageView
             android:id="@+id/imageView7"
@@ -152,12 +153,12 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
+            android:layout_width="130dp"
+            android:layout_height="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/recipe_title"
-            app:srcCompat="@drawable/rectangle_5" />
+            app:layout_constraintTop_toBottomOf="@+id/recipe_title"
+            app:srcCompat="@drawable/filled_rectangle_rounded" />
 
         <ImageView
             android:id="@+id/imageView4"
@@ -187,6 +188,7 @@
             android:id="@+id/imageView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintStart_toStartOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="@+id/imageView"
