--- a/app/src/main/res/layout/activity_create_ingsel.xml
+++ b/app/src/main/res/layout/activity_create_ingsel.xml
@@ -80,6 +80,7 @@
             android:id="@+id/secondsearch_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:focusable="false"
             android:hint="      Søg efter ingredienser"
             android:inputType="number"
             android:rotationY="0"
