--- a/app/src/main/res/layout/activity_create_ingsel.xml
+++ b/app/src/main/res/layout/activity_create_ingsel.xml
@@ -61,7 +61,8 @@
             android:id="@id/search_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Indtast opskriftnavn " />
+            android:hint="Indtast navn på gruppe"
+            android:inputType="textCapSentences" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
