--- a/app/src/main/res/layout/item_dialog_view_ingredient.xml
+++ b/app/src/main/res/layout/item_dialog_view_ingredient.xml
@@ -11,14 +11,16 @@
 
         <TextView
             android:id="@+id/ingredient_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:text="TextView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:ellipsize="end"
             android:maxLength="25"
-            android:ellipsize="end"/>
+            android:maxLines="1"
+            android:text="TextView"
+            app:layout_constraintEnd_toStartOf="@+id/imageView3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/ingredient_price"
