--- a/app/src/main/res/layout/item_ingredient_in_recipe.xml
+++ b/app/src/main/res/layout/item_ingredient_in_recipe.xml
@@ -7,7 +7,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="65dp">
 
         <View
             android:id="@+id/divider2"
@@ -20,13 +20,14 @@
 
         <ImageView
             android:id="@+id/imageView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginStart="10dp"
-            app:layout_constraintBottom_toBottomOf="@+id/ingredient_namead"
+            app:tint="#70CF43"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/ingredient_checkbox"
-            app:layout_constraintTop_toTopOf="@+id/ingredientgroup_name"
-            app:srcCompat="@drawable/fab_counter_bg" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/circle" />
 
         <TextView
             android:id="@+id/ingredient_counter"
@@ -48,7 +49,7 @@
             android:layout_marginStart="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/ingredientgroup_name"
@@ -59,7 +60,7 @@
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/roboto_bold"
             android:maxLines="1"
-            android:text=""
+            android:text="Kød"
             android:textColor="@color/colorBlack"
             android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@+id/divider2"
@@ -68,15 +69,19 @@
 
         <TextView
             android:id="@+id/ingredient_namead"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="10dp"
+            android:ellipsize="end"
             android:fontFamily="@font/roboto_light"
-            android:text=""
+            android:maxLines="1"
+            android:text="HAKKET OKSE"
             android:textColor="@color/colorPrimary"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/ingredient_checkbox"
+            app:layout_constraintEnd_toStartOf="@+id/ingredient_group_price_crowns"
             app:layout_constraintStart_toEndOf="@+id/imageView9" />
 
         <TextView
@@ -95,7 +100,7 @@
             android:id="@+id/ingredient_group_price_ears"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="2dp"
             android:fontFamily="@font/roboto_black"
             android:text=""
