--- a/app/src/main/res/layout/item_ingredient_search.xml
+++ b/app/src/main/res/layout/item_ingredient_search.xml
@@ -13,16 +13,17 @@
         <TextView
             android:id="@+id/ing_name"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:fontFamily="@font/roboto_light"
+            android:gravity="center_vertical"
             android:maxLines="2"
             android:text="TextView"
             android:textColor="@color/colorBlack"
             android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/ing_price"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="parent" />
