--- a/app/src/main/res/layout/item_ingredient_search.xml
+++ b/app/src/main/res/layout/item_ingredient_search.xml
@@ -25,7 +25,7 @@
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/ing_price"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/green_circle"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -39,8 +39,8 @@
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="@+id/green_circle"
+            app:layout_constraintStart_toStartOf="@+id/green_circle"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
@@ -80,7 +80,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/green_circle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
