--- a/app/src/main/res/layout/activity_create_recipe.xml
+++ b/app/src/main/res/layout/activity_create_recipe.xml
@@ -152,7 +152,7 @@
             app:srcCompat="@drawable/favorite_24px_outlined" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/green_circle"
             android:layout_width="130dp"
             android:layout_height="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -166,9 +166,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginBottom="20dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintBottom_toBottomOf="@+id/green_circle"
+            app:layout_constraintEnd_toEndOf="@+id/green_circle"
+            app:layout_constraintStart_toEndOf="@+id/green_circle"
             app:srcCompat="@drawable/ellipse_5" />
 
         <TextView
@@ -189,9 +189,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="@+id/imageView"
+            app:layout_constraintBottom_toBottomOf="@+id/green_circle"
+            app:layout_constraintStart_toStartOf="@+id/green_circle"
+            app:layout_constraintTop_toTopOf="@+id/green_circle"
             app:srcCompat="@drawable/shopping_cart_24px" />
 
         <TextView
@@ -209,10 +209,10 @@
             android:id="@+id/imageView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintBottom_toBottomOf="@+id/green_circle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/green_circle"
             app:srcCompat="@drawable/access_time_24px" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
