--- a/app/src/main/res/layout/activity_create_ingsel.xml
+++ b/app/src/main/res/layout/activity_create_ingsel.xml
@@ -25,11 +25,13 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tilføj Ingrediens"
-            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:text="Ny Ingrediensgruppe"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/colorWhite"
-            android:layout_gravity="center"/>
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="125dp"
+            tools:layout_editor_absoluteY="13dp" />
 
     </androidx.appcompat.widget.Toolbar>
 
