--- a/app/src/main/res/layout/activity_create_ingsel.xml
+++ b/app/src/main/res/layout/activity_create_ingsel.xml
@@ -126,8 +126,8 @@
         android:layout_marginEnd="10dp"
         android:text="Indtast et navn til din ingrediensgruppe, og tilføj de varer du ønsker at sammenligne priser for"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@id/search_bar"
-        app:layout_constraintStart_toStartOf="@id/search_bar"
+        app:layout_constraintEnd_toEndOf="@+id/textInputRecipeTitle"
+        app:layout_constraintStart_toStartOf="@+id/textInputRecipeTitle"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 
